[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knock-telegram"
version = "0.0.1"
authors = [
  { name="Knowblesse", email="knowblesse@gmail.com" },
]
description = "A small package to call telegram"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/knowblesse/knock-telegram"
"Bug Tracker" = "https://github.com/knowblesse/knock-telegram/issues"